# ZincBromideBatterySOC_BIG

./: 20250327-80A-1H-3循环-2H-3循环-4H-1循环.csv  20250327-80A-1H-3循环-2H-3循环-4H-1循环.soc.csv  20250327-80A-1H-3循环-2H-3循环-4H-1循环.soc_pred.csv  CMakeLists.txt  README.md  csv2soc.py  hybrid_cc_lstm_ekf_soc.h  hybrid_cc_lstm_ekf_soc_v3_ac5.cpp  plot_soc.py  weights.cpp  weights.h
